refactor(ai-translate): 优化创建成功后跳转到任务页面的链接
- 在 index.html 文件中，将 task.html 的链接地址前添加了 ./，以确保正确的相对路径
- 这个修改确保了用户在创建任务成功后能够正确跳转到任务页面

--- a/ai-translate/index.html
+++ b/ai-translate/index.html
@@ -369,7 +369,7 @@
         openModal('创建成功', body, [
           { text: '查看任务', onClick: () => {
               if (taskid) {
-                window.location.href = `task.html?id=${encodeURIComponent(taskid)}`;
+                window.location.href = `./task.html?id=${encodeURIComponent(taskid)}`;
               } else {
                 closeModal();
               }
