feat(ai-translate): 更新 .zip 文件上传说明并添加示例链接
- 修改了 .zip 文件上传的说明，强调内部应包含所有相关数据包根目录
- 添加了示例 .zip 文件下载链接，帮助用户更好地理解上传文件的结构

--- a/ai-translate/index.html
+++ b/ai-translate/index.html
@@ -184,7 +184,7 @@
             <details>
               <summary>展开/收起</summary>
               <div style="margin-top:8px; color:#bcc5d3; font-size:14px; line-height:1.7">
-                • 支持上传一个 .zip 文件，内部包含需要提取与翻译的资源文件。<br/>
+                • 支持上传一个 .zip 文件，内部包含所有相关数据包根目录，<a href="./示例.zip" target="_blank">示例.zip</a>。<br/>
                 • 创建成功后会返回 taskid，可在“查看任务”页查看实时状态。<br/>
                 • 如遇错误，请先核对 API URL 与 Key，并稍后重试。<br/>
                 • 多次重试仍失败，可使用返回的 issue 链接反馈，或联系站长：<code>dainsleif@yeah.net</code>。
