refactor(schem): 优化资源引用路径
- 更新 HTML 文件中的资源引用路径，使用绝对路径替代相对路径
- 修改 entry.js 中的模块导入路径，确保正确加载子模块
- 调整页面跳转链接，统一使用 /schem 前缀

--- a/schem/delete.html
+++ b/schem/delete.html
@@ -6,8 +6,8 @@
         <title>SysHub Schematic Cloud</title>
         <meta name="description" content="上传 schem 到云端">
         <link rel="prefetch" as="image" type="image/svg+xml" href="https://pic1.imgdb.cn/item/68a5acfd58cb8da5c83e9d04.svg">
-        <link rel="stylesheet" type="text/css" href="assets/index.css">
-        <script type="module" src="assets/delete.js"></script>
+        <link rel="stylesheet" type="text/css" href="/schem/assets/index.css">
+        <script type="module" src="/schem/assets/delete.js"></script>
         <style>
             body {
                 background-image: url(https://pic1.imgdb.cn/item/6725c853d29ded1a8c67b1d8.webp);
@@ -31,8 +31,8 @@
                             <button class="return" id="file-delete">删除</button>
                         </div>
                         <p>
-                            点击这里 <a href="index.html">上传</a>
-                            或 <a href="download.html">下载</a>
+                            点击这里 <a href="/schem/index.html">上传</a>
+                            或 <a href="/schem/download.html">下载</a>
                             schem文件 
                         </p>
                     </div>
@@ -58,6 +58,6 @@
                 </div>
             </div>
         </div>
-        <script type="module" src="assets/entry.js" crossorigin></script>
+        <script type="module" src="/schem/assets/entry.js" crossorigin></script>
     </body>
 </html>
