--- a/schem/index.html
+++ b/schem/index.html
@@ -6,8 +6,8 @@
         <title>SysHub Schematic Cloud</title>
         <meta name="description" content="上传 schem 到云端">
         <link rel="prefetch" as="image" type="image/svg+xml" href="https://pic1.imgdb.cn/item/68a5acfd58cb8da5c83e9d04.svg">
-        <link rel="stylesheet" type="text/css" href="assets/index.css">
-        <script type="module" src="assets/index.js"></script>
+        <link rel="stylesheet" type="text/css" href="/schem/assets/index.css">
+        <script type="module" src="/schem/assets/index.js"></script>
         <style>
             body {
                 background-image: url(https://pic1.imgdb.cn/item/6725c853d29ded1a8c67b1d8.webp);
@@ -30,8 +30,8 @@
                             <input id="fileInput" tabindex="-1" type="file" accept=".schem, .schematic">
                         </div>
                         <p>
-                            点击这里 <a href="download.html">下载</a>
-                            或 <a href="delete.html">删除</a>
+                            点击这里 <a href="/schem/download.html">下载</a>
+                            或 <a href="/schem/delete.html">删除</a>
                             schem文件 
                         </p>
                     </div>
@@ -73,6 +73,6 @@
                 </div>
             </div>
         </div>
-        <script type="module" src="assets/entry.js" crossorigin></script>
+        <script type="module" src="/schem/assets/entry.js" crossorigin></script>
     </body>
 </html>
